--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,11 @@ body{
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.4);
 }
 
+.swiper-button-next,
+.swiper-button-prev{
+  visibility: hidden;
+}
+
 /* Стили для контейнера слайдера */
 .swiper-container {
     position: relative; /* Обязательно для правильного позиционирования кнопок */
@@ -201,167 +206,5 @@ body{
     }
 }
 
-/* #################### */  
-  
-  .login-container {
-    width: 100%;
-    max-width: 400px;
-    padding: 2rem;
-    text-align: center;
-    position: relative;
-    background: rgba(18, 18, 18, 0.6); 
-    backdrop-filter: blur(10px);
-    border: 2px solid rgba(255, 255, 255, 0.5); 
-    border-radius: 16px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8);
-    transition: border-color 0.2s ease; 
-  }
-  
-  
-  .back-btn {
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    background: #333;
-    color: white;
-    border: 1px solid #333;
-    font-size: 1rem;
-    padding: 0.5rem 1rem;
-    border-radius: 8px;
-    cursor: pointer;
-    z-index: 3;
-    transition: all 0.3s ease;
-  }
-  
-  .back-btn:hover {
-    background: #444;
-    border-color: white;
-    transform: scale(1.05);
-  }
-  
-  .logo-placeholder {
-    width: 60px;
-    height: 60px;
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-    margin: 0 auto 1rem auto;
-  }
-  
-  h1 {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  p {
-    font-size: 0.9rem;
-    margin-bottom: 1rem;
-  }
-  
-  p a {
-    color: #007bff;
-    text-decoration: none;
-  }
-  
-  form {
-    width: 100%;
-  }
-  
-  input {
-    width: 100%;
-    padding: 0.8rem;
-    margin: 0.5rem 0;
-    border: 1px solid #333;
-    background: #1c1c1c;
-    border-radius: 8px;
-    color: white;
-    font-size: 0.9rem;
-  }
-  
-  input:focus {
-    border-color: white;
-  }
-  
-  input::placeholder {
-    color: #777;
-  }
-  
-  .primary-btn {
-    width: 100%;
-    padding: 0.8rem;
-    background: white;
-    color: black;
-    border: none;
-    border-radius: 8px;
-    font-size: 1rem;
-    margin-top: 1rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  
-  
-  .primary-btn:hover {
-    background-color: #f0f0f0;
-    transform: scale(1.05);
-  }
-  .terms {
-    font-size: 0.8rem;
-    color: #555;
-    margin-top: 2rem;
-  }
-  
-  .terms a {
-    color: white;
-    text-decoration: underline;
-  }
-  
-  .register-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .name-fields {
-    display: flex;
-    gap: 1rem; 
-  }
-  
-  .name-fields input {
-    width: calc(50% - 0.5rem);
-  }
-  
-  .register-form input {
-    width: 100%;
-    padding: 0.8rem;
-    margin: 0.5rem 0;
-    border: 1px solid #333;
-    background: #1c1c1c;
-    border-radius: 8px;
-    color: white;
-    font-size: 0.9rem;
-  }
-  
-  .register-form input:focus {
-    transition: border-color 0.3s ease;
-  }
-  
-  .register-form input::placeholder {
-    color: #777;
-  }
-  
-  .primary-btn {
-    width: 100%;
-    padding: 0.8rem;
-    background: white;
-    color: black;
-    border: none;
-    border-radius: 8px;
-    font-size: 1rem;
-    margin-top: 1rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  
-  .primary-btn:hover {
-    background-color: #f0f0f0;
-    transform: scale(1.05);
-  }
+
   
