--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body{
 }
   
 .text-glow-hover:hover {
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.4);
+    text-shadow: 0 0 10px #b179ff, 0 0 20px #b179ff, 0 0 30px #b179ff;
     transition: text-shadow 0.2s ease;
 }
 
@@ -127,7 +127,7 @@ body{
     font-size: 1.2em;
     font-weight: normal;
     text-decoration: none;
-    color: #027a48;
+    color: #3ECF8E;
     cursor: pointer;
     padding-bottom: 2px; /* Отступ снизу для линии */
 }
@@ -139,7 +139,7 @@ body{
     left: 50%; /* Начало линии из центра */
     width: 0; /* Исходная ширина линии */
     height: 2px; /* Толщина линии */
-    background-color: #027a48; /* Цвет линии */
+    background-color: #3ECF8E; /* Цвет линии */
     transition: width 0.4s ease, left 0.4s ease; /* Плавный переход */
 }
   
