--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body{
 
 }
 .text-glow-hover {
-    transition: text-shadow 0.3s ease; /* Плавный переход для text-shadow */
+    transition: text-shadow 0.3s ease; 
 }
   
 .text-glow-hover:hover {
@@ -22,22 +22,22 @@ body{
 }
 
 .custom-shadow {
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6); /* начальная тень */
-    transition: box-shadow 0.3s ease-in-out; /* плавная анимация */
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6); 
+    transition: box-shadow 0.3s ease-in-out; 
 }
   
-/* Эффект при наведении */
+
 .custom-shadow:hover {
-    box-shadow: 0px 0px 25px rgba(211, 211, 211, 0.8); /* тень становится чуть темнее и больше */
+    box-shadow: 0px 0px 25px rgba(211, 211, 211, 0.8);
 }
 
 .scale-hover{
     transform: scale(1);
-    transition: transform 0.3s; /* Плавный переход */
+    transition: transform 0.3s; 
 }
 
 .scale-hover:hover{
-    transform: scale(1.1); /* Увеличиваем размер на 10% */
+    transform: scale(1.1); 
 }
 
 .shadow-hover{
