--- a/src/App.css
+++ b/src/App.css
@@ -249,6 +249,7 @@ body{
     background-color: #AB70FD;
     border: 2px solid black;
     transform: scale(1.05);
+    font-weight: bold;
 }
   
 
