--- a/src/App.css
+++ b/src/App.css
@@ -261,28 +261,6 @@ body{
 }
 
 
-  
-/* Стиль скролла только для .scroll-box */
-/* ::-webkit-scrollbar {
-    width: 7px; 
-}
-
-::-webkit-scrollbar-track {
-    background: transparent;
-    
-}
-
-::-webkit-scrollbar-thumb {
-    background: #8b3cfa;
-    border-radius: 5px;
-    position: relative;
-    right: 100px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #a56bff;
-} */
-
 
 
 /* Для Webkit-браузеров (Chrome, Safari) */
@@ -295,26 +273,19 @@ body {
     scrollbar-width: none;  /* Отключаем отображение скроллбара */
 }
 
+@media only screen and (max-width: 767px) {
+    ::-webkit-scrollbar {
+        display: none;  /* Отключаем отображение скроллбара */
+    }
 
-.container {
-    width: 100vw; /* Полная ширина окна */
-    height: 100vh; /* Полная высота окна, если нужно */
-    transition: all 0.3s ease; /* Плавное изменение */
-    margin: 0; /* Убираем возможные отступы */
-    padding: 0; /* Убираем внутренние отступы */
-    transition: all 0.3s ease; /* Плавное изменение */
-}
+    body {
+        scrollbar-width: none;  /* Отключаем отображение скроллбара */
+    }
 
-/* Темная тема */
-.dark {
-    background-color: black;
-    width: 100%;
-    color: white;
-}
+    .swiper-pagination {
+        margin-left: 35px;
+        
+    }
+    
 
-/* Светлая тема */
-.light {
-    background-color: white;
-    color: black;
-    border-color: black;
 }
